--- a/css/index.css
+++ b/css/index.css
@@ -3,15 +3,15 @@
 -----------------------------------------*/
 :root {
   --white-color:                  #ffffff;
-  --primary-color:                #BC6C25;
-  --secondary-color:              #DDA15E;
-  --section-bg-color:             #b78752;
-  --custom-btn-bg-color:          #BC6C25;
-  --custom-btn-bg-hover-color:    #DDA15E;
+  --primary-color:                #000000;
+  --secondary-color:              #3d922c;
+  --section-bg-color:             #386030;
+  --custom-btn-bg-color:          #4a732d;
+  --custom-btn-bg-hover-color:    #024603;
   --dark-color:                   #000000;
-  --p-color:                      #717275;
-  --border-color:                 #7fffd4;
-  --link-hover-color:             #E76F51;
+  --p-color:                      #c3c3c3;
+  --border-color:                 #54f890;
+  --link-hover-color:             #9e0303;
 
   --body-font-family:             'Plus Jakarta Sans', sans-serif;
 
