--- a/css/index.css
+++ b/css/index.css
@@ -2,43 +2,43 @@
   CUSTOM PROPERTIES ( VARIABLES )             
 -----------------------------------------*/
 :root {
-  --white-color:                  #ffffff;
-  --primary-color:                #000000;
-  --secondary-color:              #3d922c;
-  --section-bg-color:             #000000;
-  --custom-btn-bg-color:          #4a732d;
-  --custom-btn-bg-hover-color:    #024603;
-  --dark-color:                   #000000;
-  --p-color:                      #c3c3c3;
-  --border-color:                 #54f890;
-  --link-hover-color:             #9e0303;
+  --white-color: #ffffff;
+  --primary-color: #000000;
+  --secondary-color: #3d922c;
+  --section-bg-color: #000000;
+  --custom-btn-bg-color: #4a732d;
+  --custom-btn-bg-hover-color: #024603;
+  --dark-color: #000000;
+  --p-color: #c3c3c3;
+  --border-color: #54f890;
+  --link-hover-color: #9e0303;
 
-  --body-font-family:             'Plus Jakarta Sans', sans-serif;
+  --body-font-family: 'Plus Jakarta Sans', sans-serif;
 
-  --h1-font-size:                 68px;
-  --h2-font-size:                 46px;
-  --h3-font-size:                 32px;
-  --h4-font-size:                 28px;
-  --h5-font-size:                 24px;
-  --h6-font-size:                 22px;
-  --p-font-size:                  20px;
-  --btn-font-size:                16px;
-  --form-btn-font-size:           18px;
-  --menu-font-size:               16px;
+  --h1-font-size: 68px;
+  --h2-font-size: 46px;
+  --h3-font-size: 32px;
+  --h4-font-size: 28px;
+  --h5-font-size: 24px;
+  --h6-font-size: 22px;
+  --p-font-size: 20px;
+  --btn-font-size: 16px;
+  --form-btn-font-size: 18px;
+  --menu-font-size: 16px;
 
-  --border-radius-large:          100px;
-  --border-radius-medium:         20px;
-  --border-radius-small:          10px;
+  --border-radius-large: 100px;
+  --border-radius-medium: 20px;
+  --border-radius-small: 10px;
 
-  --font-weight-thin:             200;
-  --font-weight-light:            300;
-  --font-weight-normal:           400;
-  --font-weight-bold:             700;
+  --font-weight-thin: 200;
+  --font-weight-light: 300;
+  --font-weight-normal: 400;
+  --font-weight-bold: 700;
 }
 
 body {
   background-color: var(--white-color);
-  font-family: var(--body-font-family); 
+  font-family: var(--body-font-family);
 }
 
 
@@ -99,7 +99,7 @@ ul li {
   font-weight: var(--font-weight-light);
 }
 
-a, 
+a,
 button {
   touch-action: manipulation;
   transition: all 0.3s;
@@ -145,7 +145,7 @@ strong {
   opacity: 0.65;
 }
 
-.section-overlay + .container {
+.section-overlay+.container {
   position: relative;
   z-index: 22;
 }
@@ -259,7 +259,8 @@ strong {
     border-color: transparent white transparent transparent;
   }
 
-  .timeline-container-left::after, .timeline-container-right::after {
+  .timeline-container-left::after,
+  .timeline-container-right::after {
     left: 6px;
   }
 
@@ -373,14 +374,14 @@ strong {
   padding-bottom: 15px;
 }
 
-.navbar-nav .nav-link.active, 
+.navbar-nav .nav-link.active,
 .navbar-nav .nav-link:hover {
   color: var(--secondary-color);
 }
 
 .navbar .dropdown-menu {
   background: var(--white-color);
-  box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175);
   border: 0;
   display: inherit;
   opacity: 0;
@@ -411,9 +412,9 @@ strong {
   position: relative;
 }
 
-.navbar .dropdown-item.active, 
+.navbar .dropdown-item.active,
 .navbar .dropdown-item:active,
-.navbar .dropdown-item:focus, 
+.navbar .dropdown-item:focus,
 .navbar .dropdown-item:hover {
   background: transparent;
   color: var(--link-hover-color);
@@ -641,8 +642,10 @@ strong {
 .team-block-image-wrap {
   width: 100%;
   display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center;    /* Center vertically */
+  justify-content: center;
+  /* Center horizontally */
+  align-items: center;
+  /* Center vertically */
 }
 
 .team-block-image {
@@ -737,7 +740,7 @@ strong {
   REVIEWS              
 -----------------------------------------*/
 .reviews-section {
-  background-color:#024603;
+  background-color: #024603;
 }
 
 .reviews-block {
@@ -940,7 +943,7 @@ strong {
 
 .custom-form input::-webkit-input-placeholder,
 .custom-form textarea::-webkit-input-placeholder {
-   color: var(--white-color);
+  color: var(--white-color);
 }
 
 .booking-form input:-moz-placeholder,
@@ -985,7 +988,7 @@ strong {
 }
 
 .copyright-text a {
-	color: rgba(255, 200, 160, 0.75);
+  color: rgba(255, 200, 160, 0.75);
 }
 
 
@@ -1121,6 +1124,7 @@ strong {
 
 
 @media screen and (max-width: 578px) {
+
   .navbar .container,
   .sticky-wrapper.is-sticky .container {
     margin-right: 10px;
@@ -1187,4 +1191,3 @@ strong {
     top: 13px;
   }
 }
-
