--- a/css/index.css
+++ b/css/index.css
@@ -788,7 +788,7 @@ strong {
   BOOKING SECTION              
 -----------------------------------------*/
 .booking-section {
-  background-image: url('../images/young-female-barista-wear-face-mask-serving-take-away-hot-coffee-paper-cup-consumer-cafe.jpg');
+  background-image: url('../images/WelcomeToTaco2.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -837,7 +837,7 @@ strong {
   CONTACT               
 -----------------------------------------*/
 .contact-section {
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(0, 0, 0)), url('../images/young-female-barista-wear-face-mask-serving-take-away-hot-coffee-paper-cup-consumer-cafe.jpg');
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(0, 0, 0)), url('../images/TacoBox1.webp');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
